# machine-learning

./: .gitignore  README.md
01-Simple-Linear-Regression/: linreg.R  linreg.gradient.py
01-Simple-Linear-Regression/R-standard/: linreg.R
01-Simple-Linear-Regression/naive-fsharp/: Naive.fsproj  Program.fs  readme.md
01-Simple-Linear-Regression/python-gradient/: linreg.gradient.py
01-Simple-Linear-Regression/python-naive/: main.py
02-The-Perceptron/: README.md
02-The-Perceptron/Clojure/: main.clj
02-The-Perceptron/fsharp-simple/: 02-NeuralNet.fsproj  SampleData.fs  (+1 more)
04-Clustering/: python-kmeans.py
04-Clustering/clojure-ajw/haskell/: DM.cabal  DM4.lkshs  DM4.lkshw  ajwi.txt  ajwo.txt  cabal.sandbox.config  iris-ajw.data  iris1.data  iris2.data  iris4.data
04-Clustering/clojure-ajw/haskell/.cabal-sandbox/: add-source-timestamps
04-Clustering/clojure-ajw/haskell/src/: Main.hs  Main.hs~
04-Clustering/clojure-ajw/haskell/src/KM/: KMeans.hs  KMeans.hs~  KMeansx.hs  Vector.hs  Vector.hs~
06-Naive-Bayes/: bayes_msg_filter.py  general_classifier.py  naive.py  nbayes.py  spam_bayes.py  spam_filter.py
06-spam-filtering/: SMSSpamCollection.txt  spam_filter.py
07-Decision-Trees/: IntroDecisionTrees.odp  README.md  csv.clean.up.R  decision_tree.py  dtree-building-blocks.py  dtree.py  dtree_simple.py  titanic3.clean.reordered.csv  transform.data.pl
08-K-nearest-neighbours/: knn.explore.iris.data.ipynb  knn.py  knnClassification.py  knnGolf.py
competition/: ANSWERS.txt  john-donnellan.txt  ole-schulz-trieglaff.txt  paul-mcgarth.txt  validate.py
(+242 files in other folders)
